Fix incorrect css link color placement for dark mode

--- a/layout/less/list.less
+++ b/layout/less/list.less
@@ -48,18 +48,18 @@
         word-break: break-all;
         white-space: normal;
     }
-}
 
-/* If the client prefers a dark color scheme, the following classes will be
- * applied to give the site a dark look and feel.
- *
- * NOTE: These classes need to be at the end of this file, as they override the
- *       default settings previously defined, if the dark color scheme is
- *       requested. */
-@media (prefers-color-scheme: dark) {
-    a,
-    a:hover,
-    a:focus {
-        color: white;
+    /* If the client prefers a dark color scheme, the following classes will be
+     * applied to give the site a dark look and feel.
+     *
+     * NOTE: These classes need to be at the end of this file, as they override the
+     *       default settings previously defined, if the dark color scheme is
+     *       requested. */
+    @media (prefers-color-scheme: dark) {
+        a,
+        a:hover,
+        a:focus {
+            color: @white;
+        }
     }
 }
